<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/owner_foods"
            android:icon="@drawable/ic_food"
            android:title="@string/foods" />
        <item
            android:id="@+id/owner_info"
            android:icon="@drawable/ic_info"
            android:title="@string/information" />
        <item
            android:id="@+id/owner_add_food"
            android:icon="@drawable/ic_add_food"
            android:title="@string/add_food" />
        <item
            android:id="@+id/owner_booking"
            android:icon="@drawable/ic_booking"
            android:title="@string/advance_booking" />
        <item
            android:id="@+id/owner_offer"
            android:icon="@drawable/ic_offer"
            android:title="@string/special_offers" />
        <item
            android:id="@+id/owner_add_user"
            android:icon="@drawable/ic_reg"
            android:title="@string/add_users" />
        <item
            android:id="@+id/owner_logout"
            android:icon="@drawable/ic_login"
            android:title="@string/sign_out" />
    </group>

</menu>
