<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csecu.amrit.ctgrestaurants.fragments.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/reg_et_res_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_edit_text_background"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_restaurant"
            android:ems="10"
            android:hint="@string/restaurant_s_name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/reg_et_own_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_edit_text_background"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_person"
            android:ems="10"
            android:hint="@string/owner_s_name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/reg_et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_edit_text_background"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_phone"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="10dp" />

        <EditText
            android:id="@+id/reg_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_edit_text_background"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/reg_et_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_edit_text_background"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock"
            android:ems="10"
            android:hint="@string/re_type_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/reg_et_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_edit_text_background"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_people"
            android:ems="10"
            android:hint="@string/capacity"
            android:inputType="number"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/colorGray"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reg_tv_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_person"
                android:padding="10dp"
                android:text="@string/location"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/reg_bt_location"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/location" />

        </LinearLayout>

        <EditText
            android:id="@+id/reg_et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_edit_text_background"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_description"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:padding="10dp" />

        <Button
            android:id="@+id/reg_bt_next"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/next" />
    </LinearLayout>
</ScrollView>