<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen"
    tools:context="com.csecu.amrit.ctgrestaurants.fragments.NotifyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/title"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/notify_etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/colorWhite"
            android:ems="10"
            android:hint="@string/write_here"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:text="@string/message"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/notify_etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/colorWhite"
            android:ems="10"
            android:hint="@string/write_here"
            android:inputType="textLongMessage|textMultiLine"
            android:padding="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/notify_btSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/send"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
