<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csecu.amrit.ctgrestaurants.fragments.BookingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher_new" />

        </LinearLayout>

        <EditText
            android:id="@+id/booking_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_edit_text_background"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_person"
            android:ems="10"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/booking_et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_edit_text_background"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_phone"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="10dp" />

        <EditText
            android:id="@+id/booking_et_occasion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_edit_text_background"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_event"
            android:ems="10"
            android:hint="@string/occasion"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/booking_et_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_edit_text_background"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_people"
            android:ems="10"
            android:hint="@string/number_of_persons"
            android:inputType="number"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/booking_tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/pick_date"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <Button
                android:id="@+id/booking_bt_date"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_date"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/booking_tv_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/pick_time"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <Button
                android:id="@+id/booking_bt_time"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_time"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_food"
                android:padding="10dp"
                android:text="@string/items_to_be_served"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/booking_sp_items"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <co.lujun.androidtagview.TagContainerLayout
            android:id="@+id/booking_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="10dp"
            android:visibility="gone"
            app:container_enable_drag="false"
            app:horizontal_interval="10dp"
            app:tag_clickable="true"
            app:tag_enable_cross="true"
            app:tag_theme="pure_teal"
            app:vertical_interval="10dp" />

        <EditText
            android:id="@+id/booking_et_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_edit_text_background"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_description"
            android:ems="10"
            android:hint="@string/special_request"
            android:inputType="text"
            android:padding="10dp" />

        <Button
            android:id="@+id/booking_bt_submit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>
